# zotero-headless

./: .gitignore  CONTRIBUTING.md  Makefile  README.md  pyproject.toml
.github/workflows/: publish.yml
desktop_helper/: README.md  metadata.json
desktop_helper/patches/: README.md
docs/: API_AND_MCP.md  ARCHITECTURE.md  CLI.md  DESKTOP_HELPER.md  IMPLEMENTATION_PLAN.md  LOCAL_DESKTOP.md  MULTI_ACCOUNT_SERVER_SETUP.md  README.md  RECOVERY.md  REMOTE_SYNC.md  USE_CASES.md  ZOTERO_SOURCE_NOTES.md
plugins/openclaw-plugin-zotero/: package.json
plugins/openclaw-plugin-zotero/src/: client.ts  index.ts  permissions.test.ts  schema.ts  types.ts
plugins/openclaw-plugin-zotero/src/clients/: cli-client.test.ts  cli-client.ts  daemon-client.test.ts
plugins/openclaw-plugin-zotero/src/tools/: attachments.ts  collections.ts  export.ts  items.ts  search.ts  status.ts  sync.ts
plugins/zotero-headless-claude-code/: README.md
plugins/zotero-headless-claude-code/.claude-plugin/: plugin.json
plugins/zotero-headless-claude-code/agents/: sync-resolver.md
plugins/zotero-headless-claude-code/hooks/: hooks.json
plugins/zotero-headless-claude-code/skills/zotero-headless/: SKILL.md
plugins/zotero-headless-claude-code/skills/zotero-recovery/: SKILL.md
plugins/zotero-headless-claude-code/skills/zotero-search/: SKILL.md
plugins/zotero-headless-claude-code/skills/zotero-setup/: SKILL.md
plugins/zotero-headless-claude-code/skills/zotero-status/: SKILL.md
plugins/zotero-headless-codex/: README.md  hooks.json
plugins/zotero-headless-codex/.codex-plugin/: plugin.json
plugins/zotero-headless-codex/agents/: sync-resolver.md
plugins/zotero-headless-codex/skills/zotero-headless/: SKILL.md
plugins/zotero-headless-codex/skills/zotero-recovery/: SKILL.md
plugins/zotero-headless-codex/skills/zotero-sync/: SKILL.md
scripts/: bump_version.py
src/zotero_headless/: __init__.py  agent_setup.py  api.py  architecture.py  autodiscover.py  capabilities.py  citations.py  cli.py  cli_ui.py  config.py  daemon.py  installer_update.py  library_routing.py  local_db.py  mcp.py  observability.py  qmd.py  raw_cli.py  recovery.py  runtime.py  service.py  setup_wizard.py  store.py  sync.py  utils.py  web_api.py
src/zotero_headless/adapters/: __init__.py  local_desktop.py  web_sync.py
src/zotero_headless/core/: __init__.py  changes.py  models.py  store.py
src/zotero_headless/packaged_plugins/openclaw-plugin-zotero/: openclaw.plugin.json  package.json
tests/: test_agent_setup.py  test_api.py  test_architecture.py  test_autodiscover.py  test_capabilities.py  test_citations.py  test_cli.py  test_cli_raw.py  test_cli_ui.py  test_config_profiles.py  test_core_store.py  test_daemon.py  test_installer_update.py  test_library_routing.py  test_local_db.py  test_local_desktop_adapter.py  test_qmd.py  test_recovery.py  test_service.py  test_setup_wizard.py  test_store.py  test_web_api.py  test_web_sync_adapter.py
(+31 files in other folders)
