[build-system]
requires = ["setuptools>=68"]
build-backend = "setuptools.build_meta"

[project]
name = "zotero-headless"
version = "1.1.3"
description = "Headless Zotero-compatible runtime with CLI, HTTP API, MCP, local desktop interoperability, web sync, qmd-backed semantic search, and support for your agent tool of choice"
readme = "README.md"
requires-python = ">=3.11"
license = "MIT"
authors = [{ name = "Robin Rademacher" }]
dependencies = [
  "click>=8.1.8",
  "questionary>=2.1.0",
  "rich>=14.0.0",
  "typer>=0.24.0",
]

[project.urls]
Homepage = "https://github.com/robinradx/zotero-headless"
Repository = "https://github.com/robinradx/zotero-headless"
Issues = "https://github.com/robinradx/zotero-headless/issues"

[project.scripts]
zotero-headless = "zotero_headless.cli:main"
zotero-headless-daemon = "zotero_headless.daemon:main"
zotero-headless-mcp = "zotero_headless.mcp:main"
zhl = "zotero_headless.cli:main"
zhl-daemon = "zotero_headless.daemon:main"
zhl-mcp = "zotero_headless.mcp:main"

[tool.setuptools]
package-dir = { "" = "src" }

[tool.setuptools.package-data]
zotero_headless = [
  "packaged_plugins/**/*",
  "packaged_plugins/**/.*",
]

[tool.setuptools.packages.find]
where = ["src"]
